{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 168,
  "lineage": "82534a83-b7d9-3257-dea2-9e21e9cd7534",
  "resources": [
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:loadbalancer/app/terraform-lab-dev/9dd2dd5000cffb13",
            "arn_suffix": "app/terraform-lab-dev/9dd2dd5000cffb13",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-lab-dev-1932178242.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:loadbalancer/app/terraform-lab-dev/9dd2dd5000cffb13",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-lab-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d19e46b44b955c91"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-048953d7b5d98de5c"
              },
              {
                "subnet_id": "subnet-05dbda8c6490da980"
              }
            ],
            "subnets": [
              "subnet-048953d7b5d98de5c",
              "subnet-05dbda8c6490da980"
            ],
            "vpc_id": "vpc-059fd9955c77fe23f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:listener/app/terraform-lab-dev/9dd2dd5000cffb13/109289b8f5b6391e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:targetgroup/tf-20260701160010516900000003/4fcf2f9a6ce402a7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:listener/app/terraform-lab-dev/9dd2dd5000cffb13/109289b8f5b6391e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:loadbalancer/app/terraform-lab-dev/9dd2dd5000cffb13",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.application_load_balancer.aws_lb.main",
            "module.application_load_balancer.aws_lb_target_group.app",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.application_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:targetgroup/tf-20260701160010516900000003/4fcf2f9a6ce402a7",
            "arn_suffix": "targetgroup/tf-20260701160010516900000003/4fcf2f9a6ce402a7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:targetgroup/tf-20260701160010516900000003/4fcf2f9a6ce402a7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20260701160010516900000003",
            "name_prefix": "tf-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0402e980e69d5978b",
            "arn": "arn:aws:ec2:eu-north-1:030334072778:instance/i-00d798add9aaef761",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-lab-dev-ec2-profile",
            "id": "i-00d798add9aaef761",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072efe1a0fb026f71",
            "private_dns": "ip-10-0-10-62.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-075f9a3a2de046c81",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07453af637d3eb5c1",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc69ab803e7ae1be"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_app.data.aws_ami.instance",
            "module.iam.aws_iam_instance_profile.main",
            "module.iam.aws_iam_role.main",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.app"
          ]
        },
        {
          "index_key": "app-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0402e980e69d5978b",
            "arn": "arn:aws:ec2:eu-north-1:030334072778:instance/i-04129489cc1985143",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "terraform-lab-dev-ec2-profile",
            "id": "i-04129489cc1985143",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f586e570d7e6f875",
            "private_dns": "ip-10-0-11-124.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-075f29efe6986f01b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8e26c4da4eda911",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc69ab803e7ae1be"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_app.data.aws_ami.instance",
            "module.iam.aws_iam_instance_profile.main",
            "module.iam.aws_iam_role.main",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_app",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:targetgroup/tf-20260701160010516900000003/4fcf2f9a6ce402a7-20260701160026996500000008",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:targetgroup/tf-20260701160010516900000003/4fcf2f9a6ce402a7",
            "target_id": "i-00d798add9aaef761"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.app",
            "module.ec2_app.aws_instance.app",
            "module.ec2_app.data.aws_ami.instance",
            "module.iam.aws_iam_instance_profile.main",
            "module.iam.aws_iam_role.main",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.app"
          ]
        },
        {
          "index_key": "app-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:targetgroup/tf-20260701160010516900000003/4fcf2f9a6ce402a7-20260701160027173900000009",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:030334072778:targetgroup/tf-20260701160010516900000003/4fcf2f9a6ce402a7",
            "target_id": "i-04129489cc1985143"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.application_load_balancer.aws_lb_target_group.app",
            "module.ec2_app.aws_instance.app",
            "module.ec2_app.data.aws_ami.instance",
            "module.iam.aws_iam_instance_profile.main",
            "module.iam.aws_iam_role.main",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0614d495c6b3376d1",
            "arn": "arn:aws:ec2:eu-north-1:030334072778:elastic-ip/eipalloc-0614d495c6b3376d1",
            "domain": "vpc",
            "id": "eipalloc-0614d495c6b3376d1",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-63-76-95.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.76.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-eip",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-eip",
              "Project": "terraform-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:internet-gateway/igw-02b83a13b23edd30e",
            "id": "igw-02b83a13b23edd30e",
            "owner_id": "030334072778",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-igw",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-igw",
              "Project": "terraform-lab"
            },
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0614d495c6b3376d1",
            "association_id": "eipassoc-05af9fd3bcc5cedb9",
            "connectivity_type": "public",
            "id": "nat-0bdd81bd053b39aff",
            "network_interface_id": "eni-04b0f69e4148fb828",
            "private_ip": "10.0.1.186",
            "public_ip": "13.63.76.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05dbda8c6490da980"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00df89499efa81a961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bdd81bd053b39aff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00df89499efa81a96",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "publc_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b83a13b23edd30e",
            "id": "r-rtb-02479dbe5580c73341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02479dbe5580c7334",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gateway",
            "module.network.aws_route_table.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:route-table/rtb-02479dbe5580c7334",
            "id": "rtb-02479dbe5580c7334",
            "owner_id": "030334072778",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-public-rt",
              "Project": "terraform-lab",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-public-rt",
              "Project": "terraform-lab",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:route-table/rtb-00df89499efa81a96",
            "id": "rtb-00df89499efa81a96",
            "owner_id": "030334072778",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-private-rt",
              "Project": "terraform-lab",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-private-rt",
              "Project": "terraform-lab",
              "Tier": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03102ed27d8466301",
            "route_table_id": "rtb-00df89499efa81a96",
            "subnet_id": "subnet-07453af637d3eb5c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb7b06ce4954fca4",
            "route_table_id": "rtb-00df89499efa81a96",
            "subnet_id": "subnet-0a8e26c4da4eda911"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057cb9bfc6c29e635",
            "route_table_id": "rtb-02479dbe5580c7334",
            "subnet_id": "subnet-05dbda8c6490da980"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed8945a65d5dfe3b",
            "route_table_id": "rtb-02479dbe5580c7334",
            "subnet_id": "subnet-048953d7b5d98de5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "database-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:subnet/subnet-0d7780058030423ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7780058030423ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030334072778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-database-a",
              "Project": "terraform-lab",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-database-a",
              "Project": "terraform-lab",
              "Tier": "database"
            },
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "database-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:subnet/subnet-061d2f0f5ee935713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061d2f0f5ee935713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030334072778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-database-b",
              "Project": "terraform-lab",
              "Tier": "database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-database-b",
              "Project": "terraform-lab",
              "Tier": "database"
            },
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:subnet/subnet-07453af637d3eb5c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07453af637d3eb5c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030334072778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-private-a",
              "Project": "terraform-lab",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-private-a",
              "Project": "terraform-lab",
              "Tier": "private"
            },
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "private-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:subnet/subnet-0a8e26c4da4eda911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8e26c4da4eda911",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "030334072778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-private-b",
              "Project": "terraform-lab",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-private-b",
              "Project": "terraform-lab",
              "Tier": "private"
            },
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:subnet/subnet-05dbda8c6490da980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dbda8c6490da980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030334072778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-public-a",
              "Project": "terraform-lab",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-public-a",
              "Project": "terraform-lab",
              "Tier": "public"
            },
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "public-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:subnet/subnet-048953d7b5d98de5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048953d7b5d98de5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "030334072778",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-public-b",
              "Project": "terraform-lab",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-public-b",
              "Project": "terraform-lab",
              "Tier": "public"
            },
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:vpc/vpc-059fd9955c77fe23f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058c53862eedc3c83",
            "default_route_table_id": "rtb-0a71948b2a7f97414",
            "default_security_group_id": "sg-097f36ce187f41b2a",
            "dhcp_options_id": "dopt-0469f29f610f853a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059fd9955c77fe23f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a71948b2a7f97414",
            "owner_id": "030334072778",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-vpc",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-vpc",
              "Project": "terraform-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group/sg-0d19e46b44b955c91",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d19e46b44b955c91",
            "ingress": [],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "030334072778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-alb",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-alb",
              "Project": "terraform-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group/sg-0bc69ab803e7ae1be",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bc69ab803e7ae1be",
            "ingress": [],
            "name": "APP-SG",
            "name_prefix": "",
            "owner_id": "030334072778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-app",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-app",
              "Project": "terraform-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group/sg-0f019da0acfa595b6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f019da0acfa595b6",
            "ingress": [],
            "name": "DB-SG",
            "name_prefix": "",
            "owner_id": "030334072778",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-db",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-db",
              "Project": "terraform-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fd9955c77fe23f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group-rule/sgr-00a368f8e869a9a2a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00a368f8e869a9a2a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d19e46b44b955c91",
            "security_group_rule_id": "sgr-00a368f8e869a9a2a",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-alb",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-alb",
              "Project": "terraform-lab"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group-rule/sgr-0dcedcfe686b645f3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0dcedcfe686b645f3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bc69ab803e7ae1be",
            "security_group_rule_id": "sgr-0dcedcfe686b645f3",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-app",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-app",
              "Project": "terraform-lab"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group-rule/sgr-0e5026cea53527d7b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e5026cea53527d7b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f019da0acfa595b6",
            "security_group_rule_id": "sgr-0e5026cea53527d7b",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-db",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-db",
              "Project": "terraform-lab"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.db"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group-rule/sgr-0c6776073870a4e5f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c6776073870a4e5f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d19e46b44b955c91",
            "security_group_rule_id": "sgr-0c6776073870a4e5f",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-alb",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-alb",
              "Project": "terraform-lab"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group-rule/sgr-09fb580862ce502a3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-09fb580862ce502a3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d19e46b44b955c91",
            "security_group_rule_id": "sgr-09fb580862ce502a3",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-alb",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-alb",
              "Project": "terraform-lab"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group-rule/sgr-001ca5ac6b0bb12e6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-001ca5ac6b0bb12e6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d19e46b44b955c91",
            "security_group_id": "sg-0bc69ab803e7ae1be",
            "security_group_rule_id": "sgr-001ca5ac6b0bb12e6",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-app",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-app",
              "Project": "terraform-lab"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.alb",
            "module.security_group.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:030334072778:security-group-rule/sgr-0be25df202f98be9b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5432,
            "id": "sgr-0be25df202f98be9b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bc69ab803e7ae1be",
            "security_group_id": "sg-0f019da0acfa595b6",
            "security_group_rule_id": "sgr-0be25df202f98be9b",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-db",
              "Project": "terraform-lab"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "terraform-lab-dev-sg-db",
              "Project": "terraform-lab"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.app",
            "module.security_group.aws_security_group.db"
          ]
        }
      ]
    }
  ]
}